force-app/main/default/objects/Installed_Package__mdt/Installed_Package__mdt.object-meta.xml
<CustomObject>
    <description>This is used to Manage the Package Licenses for Users</description>
    <label>Installed Package</label>
    <pluralLabel>Installed Packages</pluralLabel>
</CustomObject>