force-app/main/default/objects/Installed_Package__mdt/fields/Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Name_Prefix__c</fullName>
    <description>Prefix to match the license name prefix</description>
    <inlineHelpText>Prefix to match the license name prefix</inlineHelpText>
    <label>Name Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>