force-app/main/default/objects/Installed_Package__mdt/fields/Pilot_User_Value__c.field-meta.xml
<CustomField>
    <fullName>Pilot_User_Value__c</fullName>
    <description>This value will get written to the User&apos;s Pilot User field when a license is granted</description>
    <inlineHelpText>This value will get written to the User&apos;s Pilot User field when a license is granted</inlineHelpText>
    <label>Pilot User Value</label>
    <length>40</length>
    <type>Text</type>
</CustomField>