force-app/main/default/objects/Installed_Package__mdt/fields/Salesforce_License__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the license should be assigned directly in salesforce</description>
    <inlineHelpText>Check this box if the license should be assigned directly in salesforce</inlineHelpText>
    <label>Salesforce License</label>
    <type>Checkbox</type>
</CustomField>