force-app/main/default/objects/Installed_Package__mdt/fields/User_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>User_Permission_Set__c</fullName>
    <description>Id of permission set that should be assigned when license is granted</description>
    <inlineHelpText>Id of permission set that should be assigned when license is granted</inlineHelpText>
    <label>User Permission Set</label>
    <length>18</length>
    <type>Text</type>
</CustomField>