force-app/main/default/objects/Installed_Package__mdt/fields/User_Permission_Set_Group__c.field-meta.xml
<CustomField>
    <fullName>User_Permission_Set_Group__c</fullName>
    <inlineHelpText>Permission Set Groups to be assigned</inlineHelpText>
    <label>User Permission Set Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>